--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ label { display: block; font-size: 0.8rem; font-weight: 800; letter-spacing: 1.5
 //  格式：ghp_xxxxxxxxxxxxxxxxxxxxxxxx
 //  只需要 gist 權限
 // ══════════════════════════════════════════════════════════
-const HARDCODED_TOKEN = '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'; // ← 可以填在這裡，或留空讓主持人在介面輸入
+const HARDCODED_TOKEN = ''; // ← 可以填在這裡，或留空讓主持人在介面輸入
 
 // ══════════════════════════════════════════════════════════
 //  GitHub Gist API 同步層
@@ -505,7 +505,7 @@ async function gistCreate(data) {
     },
     body: JSON.stringify({
       description: 'QuizGame Room Data',
-      public: false,
+      public: true,
       files: { [GIST_FILENAME]: { content: JSON.stringify(data) } }
     })
   });
@@ -534,11 +534,18 @@ async function gistUpdate(data) {
 }
 
 // 讀取 Gist（所有裝置，不需 Token）
+// _urlToken: Token 從 URL 參數傳給玩家端（主持人產生 QR 時嵌入）
+let _urlToken = '';
+
+// 讀取 Gist — public gist 不需 Token，帶 Token 可避免 rate limit
 async function gistRead(id) {
-  const headers = { 'Accept': 'application/vnd.github+json', 'X-GitHub-Api-Version': '2022-11-28' };
-  if (GITHUB_TOKEN) headers['Authorization'] = `Bearer ${GITHUB_TOKEN}`;
-  // 加上 cache-bust 避免瀏覽器快取
-  const res = await fetch(`${GIST_API}/${id}?_=${Date.now()}`, { headers });
+  const headers = {
+    'Accept': 'application/vnd.github+json',
+    'X-GitHub-Api-Version': '2022-11-28',
+  };
+  const tok = GITHUB_TOKEN || _urlToken;
+  if (tok) headers['Authorization'] = `Bearer ${tok}`;
+  const res = await fetch(`${GIST_API}/${id}?_=${Date.now()}`, { headers, cache: 'no-store' });
   if (!res.ok) throw new Error(`Gist read failed: ${res.status}`);
   const json = await res.json();
   const raw = json.files?.[GIST_FILENAME]?.content;
@@ -683,7 +690,9 @@ async function applyToken() {
 // ══════════════════════════════════════════════════════════
 function buildJoinUrl(room, gid) {
   const base = window.location.href.split('?')[0].split('#')[0];
-  return `${base}?room=${room}&gid=${gid}`;
+  // 把 token 的後16碼嵌入 URL 讓玩家端可讀寫 Gist（完整 token 在 URL 中，請勿公開分享連結）
+  const tok = GITHUB_TOKEN ? encodeURIComponent(GITHUB_TOKEN) : '';
+  return `${base}?room=${room}&gid=${gid}${tok ? '&t=' + tok : ''}`;
 }
 function genQR(containerId, url) {
   const el = document.getElementById(containerId);
@@ -1003,10 +1012,14 @@ async function tryJoinRoom() {
   const code = document.getElementById('room-code-input').value.trim();
   if (code.length !== 4 || isNaN(code)) return toast('⚠️ 請輸入 4 位數字房間碼');
 
-  // 嘗試取得 gistId（先從 URL 參數，再從 localStorage）
+  // 嘗試取得 gistId（URL 參數 > localStorage > 提示用 QR Code）
   const params = new URLSearchParams(window.location.search);
   let gid = params.get('gid') || loadRoomMapping(code);
-  if (!gid) return toast('⚠️ 找不到此房間，請用主持人的 QR Code 掃描加入');
+  if (!gid) {
+    // 若 gistId 已在記憶體（從 URL 帶入後被設定）
+    if (gistId) { gid = gistId; saveRoomMapping(code, gid); }
+    else return toast('⚠️ 找不到此房間，請用主持人的 QR Code 掃描加入');
+  }
 
   try {
     const data = await gistRead(gid);
@@ -1256,6 +1269,12 @@ function init() {
   const params = new URLSearchParams(window.location.search);
   const roomParam = params.get('room');
   const gidParam  = params.get('gid');
+  const tokParam  = params.get('t');
+  if (tokParam) {
+    _urlToken = decodeURIComponent(tokParam);
+    // 玩家端也設定 GITHUB_TOKEN，讓 gistUpdate 可用
+    GITHUB_TOKEN = _urlToken;
+  }
   if (roomParam && gidParam) {
     gistId = gidParam;
     saveRoomMapping(roomParam, gidParam);
